--- a/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-new-contract/modal-new-contract.component.html
@@ -31,7 +31,7 @@
                 <div nz-row>
                     <nz-form-item>
                     <nz-form-control>
-                        <nz-select formControlName="Clasificacion" class="inputMedium">
+                        <nz-select formControlName="clasificacion" class="inputMedium">
                             <nz-option nzLabel="Permanente" nzValue="P"></nz-option>
                             <nz-option nzLabel="Temporal" nzValue="C"></nz-option>
                             <nz-option nzLabel="Anual" nzValue="I"></nz-option>
