--- a/src/app/modules/menu-layout/components/meters/virtual-meter-modal/virtual-meter-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/virtual-meter-modal/virtual-meter-modal.component.html
@@ -99,7 +99,7 @@
           <br>
           <div nz-row class="row-5">
             <div nz-col>
-                <nz-table [nzData]="listOfVMeters" nzTableLayout="fixed" [nzScroll]="{  x: '600px', y: '240px' }"  [nzPageSize]="10">
+                <nz-table #table [nzData]="listOfVMeters" nzTableLayout="fixed" [nzScroll]="{  x: '600px', y: '240px' }"  [nzPageSize]="10">
                   <thead>
                     <tr>
                     <th nzLeft nzWidth="90px">ID</th>
@@ -119,7 +119,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let data of listOfData">
+                    <tr *ngFor="let data of table.data">
                       <td nzLeft>{{ data.id }}</td>
                       <td>{{ (data.porcentaje * 100) }} %</td>
                       <td>
