--- a/src/app/shared/components/digital-invoice/digital-invoice.component.html
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.html
@@ -320,8 +320,14 @@
 </div>
 </div>
 </div>
-
- <div *ngIf="SpinVisible">
-    <app-spiner-loader ></app-spiner-loader>
-
- </div>
+<div class="wrapper" *ngIf="this.Spinner.isVisible">
+    <div class="overlay">
+      <div class="spinner-wrapper">
+        <app-spiner-loader></app-spiner-loader>
+      </div>
+    </div>
+  
+    <div class="loaded-content" [class.blurred]="this.Spinner.isVisible">
+      <ng-content></ng-content>
+    </div>
+  </div>
