--- a/src/app/modules/menu-layout/components/especial-charges/especial-charges.component.html
+++ b/src/app/modules/menu-layout/components/especial-charges/especial-charges.component.html
@@ -1,26 +1,26 @@
 <h1>Cargos Especiales</h1>
 <div nz-row class="row-1">
+    
+  <div nz-col nzSpan="5">
 
-    <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
-        <app-modal-new-charge (DataUpdated)="updateTable($event)"></app-modal-new-charge>
+    <div *ngIf="!chargeIsDisable ; else enable">
+      <button nz-button [nzType]="'primary'" (click)="GetCharges(0, true)"><span>Medidores desabilitados</span></button>
     </div>
+    <ng-template #enable>
+      <button nz-button [nzType]="'primary'" (click)="GetCharges(1, true)"><span>Medidores Habilitados</span></button>
+    </ng-template>
 
-    <div nz-col nzSpan="12" class="row1-col2">
+  </div>
 
-        <nz-input-group [nzSuffix]="suffixIconSearch">
-          <input type="text" nz-input placeholder="input search text" />
-        </nz-input-group>
-        <ng-template #suffixIconSearch>
-          <i nz-icon nzType="search"></i>
-        </ng-template>
-        
+    <div nz-col nzSpan="4" class="row1-col1">
+        <app-modal-new-charge (DataUpdated)="updateTable($event)"></app-modal-new-charge>
     </div>
 
 
 </div>
 <div nz-row class="row-2">
   <div nz-col>
-      <nz-table [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{  x: '1150px', y: '385px' }"  [nzPageSize]="10">
+      <nz-table #table [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{  x: '1150px', y: '385px' }"  [nzPageSize]="10">
         <thead>
           <tr>
           <th nzLeft nzWidth="80px">Acciones</th>
@@ -40,14 +40,30 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let data of listOfData">
+          <tr *ngFor="let data of table.data">
             <td nzLeft>
-              <app-modal-new-charge [dataPosition]="data"></app-modal-new-charge>
-              <button class="delete" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="delete" nzTheme="outline" (click)="DeleteRate(data.id)"></i></button>
+              <div nz-row>
+
+                <div nz-col>
+                    <div *ngIf="data.estado; else disablesList"> 
+                        <button nz-button nzSize="small" nzDanger nzType="primary" (click)="disableCharge(data, false)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+                    </div>
+                    <ng-template #disablesList>
+                        <button nz-button nzSize="small" nzType="primary" (click)="disableCharge(data, true)"><i nz-icon nzType="undo" nzTheme="outline"></i></button>
+                    </ng-template>
+  
+                </div>
+
+                <div nz-col nzOffset="1"> 
+                  <app-modal-new-charge [dataPosition]="data"></app-modal-new-charge>
+
+                </div>
+
+              </div>
             </td>
             <td>{{data.id}}</td>
-            <td>{{data.fechaInicio}}</td>
-            <td>{{ data.fechaFinal }}</td>
+            <td>{{data.fechaInicio  | date:'dd/M/yyyy'  }}</td>
+            <td>{{ data.fechaFinal  | date:'dd/M/yyyy'  }}</td>
             <td nzRight>
                 {{ data.totalCargos }}
                 
