--- a/src/app/modules/menu-layout/components/especial-charges/modal-new-charge/modal-new-charge.component.html
+++ b/src/app/modules/menu-layout/components/especial-charges/modal-new-charge/modal-new-charge.component.html
@@ -1,35 +1,22 @@
 
 <div *ngIf="dataPosition; else Guardar">
-    <button class="edit" nz-button nzType="primary"  nzShape="circle" (click)="showModal()"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
+    <button nzSize="small" nz-button nzType="primary" (click)="showModal()"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
 </div>
 <ng-template #Guardar>
     <button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nuevo Cargo</span></button>
 </ng-template>
-<nz-modal [(nzVisible)]="isVisible" nzTitle="Cargo" (nzOnCancel)="handleCancel()" (nzOnOk)="PushData()">
+<nz-modal [(nzVisible)]="isVisible" nzTitle="Cargo" (nzOnCancel)="handleCancel()" (nzOnOk)="submitForm()">
     <ng-container *nzModalContent>
 
     <form nz-form [formGroup]="validateForm" nzLayout="horizontal">
 
         <div nz-row>
-            <div nz-col nzSpan="11">
-                <label>Fecha Inicial</label>
-                    <div nz-row>
-                        <nz-form-item>
-                        <nz-form-control>
-                            <nz-date-picker formControlName="fechaInicio" class="inputMedium"></nz-date-picker>
-                        </nz-form-control>
-                        </nz-form-item>
-                    </div>
-            </div>
-            <div nz-col nzSpan="11" nzOffset="2">
-                <label>Fecha Final</label>
+            <div nz-col nzSpan="24">
+                <label>Rango de fecha</label>
                 <div nz-row>
-                    <nz-form-item >
-                    <nz-form-control>
-                        <nz-date-picker formControlName="fechaFinal" class="inputMedium"></nz-date-picker>
-                    </nz-form-control>
-                    </nz-form-item>
+                        <nz-range-picker style="width: 475px;" formControlName="fecha" [nzRanges]="ranges"></nz-range-picker>
                 </div>
+    
             </div>
         </div>
         <div nz-row>
