--- a/src/app/shared/components/spiner-loader/spiner-loader.component.html
+++ b/src/app/shared/components/spiner-loader/spiner-loader.component.html
@@ -1,2 +1,16 @@
 
-<div class="spinner"></div>
+  <div class="container">
+    <div class="row">
+      <div id="loader">
+          <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="loading"></div>
+      </div>
+    </div>
+  </div>
