--- a/src/app/modules/menu-layout/components/generated-invoices/modal-new-invoices/modal-new-invoices.component.html
+++ b/src/app/modules/menu-layout/components/generated-invoices/modal-new-invoices/modal-new-invoices.component.html
@@ -1,4 +1,4 @@
-<button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nuevo Registro</span></button>
+<button nz-button [nzType]="'primary'" (click)="showModal()"><span>Factura manual</span></button>
 <nz-modal nzCentered [(nzVisible)]="isVisible" nzTitle="Factura" (nzOnCancel)="handleCancel()" (nzOnOk)="PushData()">
     <ng-container *nzModalContent>
         <form nz-form [formGroup]="validateForm" nzLayout="horizontal">
